--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,12 @@
   "author": "Sudhanshu Singh",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "chalk": "^5.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
     "mongoose": "^8.9.6"
   },
